PBT-1: OpenAPI Identity domain is finished
